--- a/index.html
+++ b/index.html
@@ -1,44 +1,34 @@
 <!DOCTYPE html>
-<html class="text-center" lang="en">
+<html lang="en">
 
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Floorplan</title>
+    <title>Chemunity_Floorplans</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/Social-Icons.css">
     <link rel="stylesheet" href="assets/css/styles.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-light navbar-expand-md">
-        <div class="container-fluid"><a class="navbar-brand" href="#">Department of Chemistry</a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+    <nav class="navbar navbar-light navbar-expand-md" style="height: 84px;">
+        <div class="container"><a class="navbar-brand" href="#"><strong>Department of Chemistry</strong></a><button data-bs-toggle="collapse" class="navbar-toggler" data-bs-target="#navcol-1"><span class="visually-hidden">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1">
                 <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link active" href="#">Level 2</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Second Item</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">Third Item</a></li>
-                </ul>
+                    <li class="nav-item"></li>
+                    <li class="nav-item"></li>
+                    <li class="nav-item"></li>
+                </ul><span class="navbar-text">Interactive Floor Plans</span>
             </div>
         </div>
     </nav>
-    <h1>&nbsp;</h1>
-    <div class="container-fluid text-center" style="width: 1112px;"><img src="assets/img/Screen%20Shot%202021-07-22%20at%2008.06.38.png" style="height: 473px;" title="Level 2"><button class="btn btn-primary" data-bs-toggle="modal" data-bss-tooltip="" type="button" data-bs-target="#modal-1" title="click here!">Button</button>
-        <div class="modal fade" role="dialog" tabindex="-1" id="modal-1">
-            <div class="modal-dialog modal-lg" role="document">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h4 class="modal-title">Chemistry Common Room</h4><button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
-                        <p>See how people use this space!</p><iframe width="560" height="315" src="https://www.youtube.com/embed/09YMtuf9Ls4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                    </div>
-                    <div class="modal-footer"><button class="btn btn-light" type="button" data-bs-dismiss="modal">Close</button></div>
-                </div>
-            </div>
-        </div>
+    <div class="container" style="margin-top: 15px;">
+        <h2>Welcome!</h2>
+        <p style="margin-top: 18px;">This is where we write some text.</p>
     </div>
+    <section></section>
+    <div class="container" style="padding-top: 44px;width: 1064px;height: 528px;"><div style="width: 100%;"><div style="position: relative; padding-bottom: 56.25%; padding-top: 0; height: 0;"><iframe frameborder="0" width=100% height=100% style="position: absolute; top: 0; left: 0; width: 100%; height: 100%;" src="https://view.genial.ly/60fed9c05825d50ddf886fbf" type="text/html" allowscriptaccess="always" allowfullscreen="true" scrolling="yes" allownetworking="all"></iframe> </div> </div></div>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="assets/js/bs-init.js"></script>
 </body>
 
 </html>
